video-processor-worker/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-worker
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-worker
  template:
    metadata:
      labels:
        app: video-worker
    spec:
      containers:
        - name: worker
          image: willcsilva/video-worker:latest
