video-processor-worker/ingress-videos.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: videos-ingress
  namespace: backend

spec:
  ingressClassName: nginx

  rules:
    - host: app.local
      http:
        paths:
          - path: /videos
            pathType: Prefix
            backend:
              service:
                name: upload-service
                port:
                  number: 3000
